--- a/jquery.slidepanel.css
+++ b/jquery.slidepanel.css
@@ -1,32 +1,32 @@
 /* Slide Panel */
         .cb_slide_panel {
-            background: url(../img/panel_bg_default.jpg) repeat;
-            border-right: 1px solid #E0E0E0;
-            box-shadow: 1px 1px 23px rgba(0, 0, 0, 0.17), -1px -1px 0 rgba(255, 255, 255, 0.85) inset;
+            background-color: black;
+            box-shadow: 1px 1px 23px #57b0ff, 1px 1px 0 #101827 inset;
             position: fixed;
             z-index: 65000;
             display: none;
         }
         .cb_slide_panel.panel_left, .cb_slide_panel.panel_right {
-            width: 278px;
+            width: 478px;
             height: 100%;
         }
         .cb_slide_panel.panel_right {
-            box-shadow: 1px 1px 23px rgba(0, 0, 0, 0.17), 1px 1px 0 rgba(255, 255, 255, 0.85) inset;
+            box-shadow: 1px 1px 23px #57b0ff, 1px 1px 0 #101827 inset;
         }
         .cb_slide_panel.panel_top, .cb_slide_panel.panel_bottom {
-            height: 278px;
+            height: 478px;
             width: 100%;
         }
         .cb_slide_panel.panel_top {
-            box-shadow: 1px 1px 23px rgba(0, 0, 0, 0.17), -1px -1px 0 rgba(255, 255, 255, 0.85) inset;
+            box-shadow: 1px 1px 23px #57b0ff, 1px 1px 0 #101827 inset;
         }
         .cb_slide_panel.panel_bottom {
-            box-shadow: 1px 1px 23px rgba(0, 0, 0, 0.17), 1px 1px 0 rgba(255, 255, 255, 0.85) inset;
+            box-shadow: 1px 1px 23px #57b0ff, 1px 1px 0 #101827 inset; 
         }
         .cb_slide_panel a.close {
-            background: url(../img/panel_close_default.jpg) no-repeat;
-            border: 1px solid #E0E0E0;
+            background-image: url("panel_close_default.png") no-repeat;
+            box-shadow: 1px 1px 23px #57b0ff, 1px 1px 0 #101827 inset; 
+            color: #57b0ff;
             height: 40px;
             position: absolute;
             text-indent: -9999em;
@@ -38,7 +38,7 @@
             top: 20px;
         }
         .cb_slide_panel.panel_right a.close {
-            left: -42px;
+            left: -92px;
             top: 20px;
         }
         .cb_slide_panel.panel_top a.close {
@@ -49,17 +49,15 @@
             top: -41px;
             left: 20px;
         }
-        .cb_slide_panel a.close:hover {
-            background-position: -40px 0;
-        }
+ 
         
         .cb_slide_panel .inner {
             padding: 20px 0 0 20px;
-            width: 248px;
+            width: 448px;
         }
         .cb_slide_panel.loading .inner {
             min-height: 300px;
-            background: url(../img/ajax-loader.gif) no-repeat scroll 50% 50% transparent
+            background: url(ajax-loader.gif) no-repeat scroll 50% 50% transparent
         }
         .cb_slide_panel h1 {
             color: #FFFFFF;
@@ -68,7 +66,6 @@
             text-shadow: 0 1px 0 #000000;
         }
         .cb_slide_panel h2 {
-            border-bottom: 1px solid #276BB3;
             color: #FFFFFF;
             font-size: 14px;
             margin: 0;
