--- a/newtab.css
+++ b/newtab.css
@@ -1,6 +1,118 @@
+/*todo list styles*/
+
+#submit-btn{
+	margin-top: 10px;
+	border-radius: 2px;
+	padding: 10px 10px;
+	margin-bottom: 10px;
+	border: 0;
+	font-family: 'Prompt', sans-serif;
+
+}
+.custom-form {
+   width: 100%;
+   background: black;
+   color: #fff;
+   padding: 10px 0;
+   margin-top: 25px;
+   padding: 5px 10px;
+   font-family: 'Prompt', sans-serif;
 
 
+ }
+ #newitem {
+   width: 80%;
+   border-radius: 2px;
+   padding: 5px 10px;
+   margin-top: 10px;
+   border: 0;
+   font-family: 'Prompt', sans-serif;
 
+
+ }
+
+ #todolist {
+   width: 80%;
+   margin: 10px 0;
+ }
+ #todolist li {
+   border-radius: 2px;
+   list-style: none;
+   background: #eee;
+   padding: 10px 10px;
+   margin-bottom: 10px;
+   font-size: 12px;
+   position: relative;
+   font-family: 'Prompt', sans-serif;
+
+ }
+ #todolist li:nth-child(2n) {
+   background: #ccc;
+ }
+ #todolist li:hover:after,
+ #todolist li.done:after {
+   content: '\2714';
+   color: #060;
+   position: absolute;
+   right: 5px;    
+ }
+ #todolist li.done:hover:after {
+   content: 'x';
+   font-weight: bold;
+   color: #c00;
+   position: absolute;
+   right: 5px;    
+ }
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    right: 0;
+    background-color: white; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 32px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    font-size: 36px;
+    margin-right: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-right .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
 
 
 
@@ -12,22 +124,10 @@
 body {
 	margin: 0 auto;
 	overflow-x: hidden;
-	font-family: sans-serif;
 	font-size: 62.5%;
 	line-height: 1;
 }
 
-/* If you want you can use font-face */
-@font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('BebasNeue-webfont.eot');
-    src: url('BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('BebasNeue-webfont.woff') format('woff'),
-         url('BebasNeue-webfont.ttf') format('truetype'),
-         url('BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 .container {
     width: 460px;
@@ -114,7 +214,6 @@ body {
 }
 
 
-#main a { font-family: "Constantia"; }
 #main a { font-size: 1.5em; }
 #main a { color: #bfdfff; }
 #main a:hover { background-color: #000000; }
@@ -126,7 +225,7 @@ body {
 #main a { line-height: 2.1944000000000004; padding-left: 0.8648000000000001em; padding-right: 0.8648000000000001em; }
 #main { width: 80%; }
 #main { left: 0%; }
-#main { margin-top: 5%; }
+#main { margin-top: 5%; font-family: 'Prompt', sans-serif;}
 .wrap { -webkit-transition-duration: 0.2s; }
 
 
